# criticality_pipeline

./: McHugh_analysis_environment.m  README.md  download_log.txt  loren_frank_helper_functions.py  test_functions.py  tools.py  work_environment.py  work_environment_for_exponential.py
Criticality_measuers_nature/: AV_analysis_EXponentErrorComments.py  AvalancheAnalysisExample.py  EXCLUDE.py  Untitled.ipynb  criticality_utils.py  plmle.py  pvaluenew.py  tplfit.py
MatlabImportExport_v6.0.0/: Mat2NlxCSC.m  Mat2NlxEV.m  Mat2NlxNDE.m  Mat2NlxNRD.m  Mat2NlxSpike.m  Mat2NlxTS.m  Mat2NlxVT.m  Nlx2MatCSC.m  Nlx2MatEV.m  Nlx2MatNDE.m  Nlx2MatNRD.m  Nlx2MatSpike.m  Nlx2MatTS.m  Nlx2MatVt.m  ReleaseNotes.txt
McHugh/mdrs-client-python/: .cspell.json  LICENSE.txt  README.md  pyproject.toml
McHugh/mdrs-client-python/mdrsclient/: __init__.py  __main__.py  __version__.py  cache.py  config.py  connection.py  nohup.out  settings.py  utils.py
McHugh/mdrs-client-python/mdrsclient/api/: __init__.py  base.py  files.py  laboratories.py  utils.py
McHugh/mdrs-client-python/mdrsclient/commands/: __init__.py  chacl.py  config.py  download.py  file_metadata.py  labs.py  login.py  logout.py  ls.py  mkdir.py  rm.py  upload.py  whoami.py
McHugh/mdrs-client-python/mdrsclient/models/: __init__.py  error.py  file.py  folder.py  laboratory.py  user.py  utils.py
McHugh_lab/: McHugh_analysis_environment.py  data_files.py  find_ntt_files.py  mixed_effect_model.py  ntt_to_npy_files.py
loren_frank_data/: Create_graphs.py  loren_frank_helper_functions.py  test_functions.py
neuropixels/: load_and_analyze_pixel_spikes.py  load_neuropixels_data.py  load_pixel_spikes.py  mr_estimator_for_saved_data.py
runnable_scripts/: test_functions.py  work_environment.py
statistics_criticality/: dataset_mchugh.parquet  statistics_mchugh.ipynb  (+1 more)
(+34 files in other folders)
